[package]
name = "superchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.48", features = ["tcp-tokio", "mdns-tokio"] }
async-std = { version = "1.12.0" }
log = "0.4"
env_logger = { version = "0.9.1" }
tui = "0.19"
crossterm = "0.25"